<!--
*      Beschreibung:	Enthält alle in der App verwendeten Strings
*      Autoren: 		Philipp Mosch, Daniel Spieker
*      Projekt:		    Campus App 2.0
*
*      ╔══════════════════════════════╗
*      ║ History                      ║
*      ╠════════════╦═════════════════╣
*      ║   Datum    ║    Änderung     ║
*      ╠════════════╬═════════════════╣
*      ║ 2015-xx-xx ║
*      ║ 20xx-xx-xx ║
*      ║ 20xx-xx-xx ║
*      ╚════════════╩═════════════════╝
*      Wichtig:           Tabelle sollte mit monospace Schriftart dargestellt werden
    -->
<resources>
    //##################################
    //# Allgemein
    //##################################

    // Wochentage
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>
    <string name="saturday">Samstag</string>
    <string name="sunday">Sonntag</string>

    // Basic dict
    <string name="refresh">aktualisieren</string>
    <string name="ok">OK</string>
    <string name="abourt">Abbrechen</string>

    // Activity Header
    <string name="title_activity_mensa">Mensa</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_lageplan">Lageplan</string>
    <string name="title_activity_guthaben">Guthaben</string>
    <string name="title_activity_news_detail">News</string>

    // Basic App Strings
    <string name="app_name">DHBW Campus App</string>
    <string name="app_organisation">DHBW Lörrach</string>
    <string name="app_type">Campus App</string>

    //##################################
    //# Dash
    //##################################

    //Dashboard Header
    <string name="news_header">News</string>
    <string name="mensa_header">Mensa</string>
    <string name="guthaben_header">Guthaben</string>



    //##################################
    //# Menü
    //##################################

    // Menü basic
    <string name="menulabel">Menü</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    // Pages
    <string name="nav_side_subp_mensa">Mensa</string>
    <string name="nav_side_subp_lageplan">Lageplan</string>
    <string name="nav_side_subp_geld">Geld</string>
    <string name="nav_side_subp_news">News</string>

    // Image Descripbtion
    <string name="image_description_logo">Logo der DHBW-Lörrach</string>

    // Role
    <string name="nav_side_role">Benutzer</string>
    <string name="nav_side_role_popup_title">Benutzer ist:</string>
    <array name="nav_side_role_popup_options">
        <item>Schüler</item>
        <item>Student</item>
        <item>Mitarbeiter</item>
        <item>Gast</item>
    </array>

    //##################################
    //# News
    //##################################

    // Allgemein
    <string name="news_template">+++ % +++</string>
    <string name="news_image_desc">News Feed icon</string>


    // Dummy
    <string name="news_dummy_content">+++ Keine Nachrichten, für erste Syncronisation bitte Internetverbindung herstellen +++</string>
    <string name="news_dummy_title">Test Title</string>
    <string name="news_dummy_description">Test Description</string>

    //##################################
    //# Guthaben
    //##################################

    // List
    <string name="guthaben_list_menue1_desc">Mensa Menü 1 (à %)</string>
    <string name="guthaben_list_menue2_desc">Mensa Menü 2 (à %)</string>
    <string name="guthaben_list_menue3_desc">Mensa Menü 3 (à %)</string>
    <string name="guthaben_list_coffee_desc">Becher Kaffee (à %)</string>
    <string name="guthaben_list_salad_desc">Salat (à %)</string>
    <string name="guthaben_list_kopiesw_desc">A4 Seiten (à %)</string>
    <string name="guthaben_list_kopiecl_desc">A4 Seiten (à %)</string>
    <string name="guthaben_list_getrwasser_des">Wasser (à %)</string>
    <string name="guthaben_list_getrcola_desc">Softdrink (à %)</string>

    <string name="guthaben_list_icon_desc">Icon zu Artikel</string>

    // Dialog
    <string name="guthaben_dialog_des">Betrag wählen</string>
    <string name="guthaben_dialog_price_sep">,</string>
    <string name="guthaben_dialog_price_unit">€</string>

    // NFC Info
    <string name="guthaben_nfcinfo_info">Aktiviere NFC an deinem Handy, um das Guthaben deines Studentenausweises auszulesen.\r\nHalte dazu den Studentenausweis an die Rückseite deines Handys</string>

    // Dummy
    <string name="guthaben_list_amount_dummy">12x</string>
    <string name="guthaben_list_desc_dummy">Mensa Menü 1 (à 2,90€)</string>

    //##################################
    //# News Detail
    //##################################

    <string name="newsdetail_gotoWebsite">Zur Webseite</string>


    //##################################
    //# Mensa
    //##################################

    // Info Menü
    <string name="mensa_actionbar_info">Öffnungszeiten</string>
    <string name="mensa_actionbar_info_times">Öffnungszeiten</string>
    <string name="mensa_actionbar_info_times_val">Mo. – Fr. 8.30 bis 13.45 Uhr</string>
    <string name="mensa_actionbar_info_lunch">Mittagessen</string>
    <string name="mensa_actionbar_info_lunch_val">11.45 bis 13.30 Uhr</string>

    // Menues
    <string name="mensa_menue_1_headline">Essen 1</string>
    <string name="mensa_menue_2_headline">Essen 2</string>
    <string name="mensa_menue_3_headline">Essen 3</string>
    <string name="mensa_menue_buffet_headline">Buffet</string>
    <string name="mensa_menue_ken">Kennzeichnungen: </string>
    <string name="mensa_menue_all">Allergene: </string>
    <string name="mensa_menue_price_dummy">3,60€</string>
    <string name="mensa_menue_name_dummy">Riesenburger</string>
    <string name="mensa_menue_additonals_des">Zusatzinformationen zum Essen</string>

    // Kennzeichnungen
    <string name="mensa_ken_headline">Kennzeichnungen</string>

    <string name="mensa_ken_msc">aus nachhaltiger Fischerei</string>
    <string name="mensa_ken_msc_No">MSC</string>

    <string name="mensa_ken_schwe">mit Schwein</string>
    <string name="mensa_ken_schwe_No">1</string>

    <string name="mensa_ken_alk">mit Alkohol</string>
    <string name="mensa_ken_alk_No">2</string>

    <string name="mensa_ken_gsch">mit Geschmacksverstärker</string>
    <string name="mensa_ken_gsch_No">3</string>

    <string name="mensa_ken_farb">mit Farbstoff</string>
    <string name="mensa_ken_farb_No">4</string>

    <string name="mensa_ken_ant">mit Antioxidationsmittel</string>
    <string name="mensa_ken_ant_No">5</string>

    <string name="mensa_ken_kon">mit Konservierungsstoff</string>
    <string name="mensa_ken_kon_No">6</string>

    <string name="mensa_ken_schw">geschwefelt</string>
    <string name="mensa_ken_schw_No">7</string>

    <string name="mensa_ken_phos">mit Phosphat</string>
    <string name="mensa_ken_phos_No">8</string>

    <string name="mensa_ken_sues">mit Süßungsmittel</string>
    <string name="mensa_ken_sues_No">9</string>

    <string name="mensa_ken_gesch">geschwärzt</string>
    <string name="mensa_ken_gesch_No">10</string>

    <string name="mensa_ken_rind">mit Rindfleisch</string>
    <string name="mensa_ken_rind_No">15</string>

    // Allergene

    <string name="mensa_all_headline">Allergene</string>

    <string name="mensa_all_1_sht">Ei</string>
    <string name="mensa_all_1">Eier</string>

    <string name="mensa_all_2_sht">Fi</string>
    <string name="mensa_all_2">Fisch</string>

    <string name="mensa_all_3_sht">Gl</string>
    <string name="mensa_all_3">GLUTENHALTIGES Getreide</string>

    <string name="mensa_all_4_sht">GlD</string>
    <string name="mensa_all_4">Dinkel</string>

    <string name="mensa_all_5_sht">GlG</string>
    <string name="mensa_all_5">Gerste</string>

    <string name="mensa_all_6_sht">GlH</string>
    <string name="mensa_all_6">Hafer</string>

    <string name="mensa_all_7_sht">GlK</string>
    <string name="mensa_all_7">Kamut</string>

    <string name="mensa_all_8_sht">GlR</string>
    <string name="mensa_all_8">Roggen</string>

    <string name="mensa_all_9_sht">GlW</string>
    <string name="mensa_all_9">Weizen</string>

    <string name="mensa_all_10_sht">Kr</string>
    <string name="mensa_all_10">Krebstiere</string>

    <string name="mensa_all_11_sht">Lak</string>
    <string name="mensa_all_11">Laktose</string>

    <string name="mensa_all_12_sht">ML</string>
    <string name="mensa_all_12">Milch /-erzeugnisse</string>

    <string name="mensa_all_13_sht">NC</string>
    <string name="mensa_all_13">Cashew</string>

    <string name="mensa_all_14_sht">Nu</string>
    <string name="mensa_all_14">SCHALENFRÜCHTE/Nüsse</string>

    <string name="mensa_all_15_sht">Sa</string>
    <string name="mensa_all_15">Sesam</string>

    <string name="mensa_all_16_sht">Se</string>
    <string name="mensa_all_16">Sellerie</string>

    <string name="mensa_all_17_sht">Sf</string>
    <string name="mensa_all_17">Schwefeldioxid/Sulfite</string>

    <string name="mensa_all_18_sht">Sn</string>
    <string name="mensa_all_18">Senf</string>

    <string name="mensa_all_19_sht">So</string>
    <string name="mensa_all_19">Soja</string>

    <string name="mensa_all_20_sht">We</string>
    <string name="mensa_all_20">Weichtiere</string>

    //##################################
    //# Lageplan
    //##################################

    <string name="lageplan_description">Lageplan Campus Hangstraße</string>
    <string name="lageplan_button">Los</string>
    <string name="lageplan_textview1">Navigationsziel / Raumnummer:</string>
    <string name="lageplan_textview2">(1 Buchstabe + 3 Zahlen)</string>
    <string name="lageplan_textview2_alt">Siehe grüne Zielmarkierung</string>
    <string name="lageplan_error">Keine valide Raumnummer!</string>
    <string name="lageplan_dummy"> </string>

    //##################################
    //# Message reporting
    //##################################

    // Errors
    <string name="ErrorR_Network">Netzwerkfehler</string>
    <string name="ErrorR_XML">Fehlerhafte Daten</string>
    <string name="ErrorR_OFFLINE">Keine Internetverbindung</string>
    <string name="ErrorR_Video">Videofehler</string>
    <string name="ErrorR_Money">Nicht genug Guthaben</string>

    // Info
    <string name="Message_refesh">Daten werden aktualisiert</string>

    // Debugging
    <string name="unkown_action">Unknown click action for this element</string>

</resources>
