<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:id="@+id/mensa_fragment_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp"
    android:scrollbars="none"
    tools:context="com.dhbwloerrach.dhbwcampusapp20.mensa_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        >

    <LinearLayout
        android:id="@+id/mensa_menue_1_container"
        style="@style/mensa_container"
        >
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                style="@style/mensa_menue_headline"
                android:text="@string/mensa_menue_1_headline"
                />
            <TextView
                android:id="@+id/mensa_menue_1_price"
                style="@style/mensa_menue_price"
                android:text="@string/mensa_menue_price_dummy"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                android:id="@+id/mensa_menue_1_name"
                style="@style/mensa_menue_name"
                android:text="@string/mensa_menue_name_dummy"/>
            <ImageView
                style="@style/mensa_menue_additonals"
                android:id="@+id/mensa_menue_1_additionals"
                android:src="@drawable/veg"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                android:id="@+id/mensa_menue_1_KenHl"
                style="@style/mensa_menue_KenHl"
                android:text="@string/mensa_menue_ken"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                style="@style/mensa_menue_Ken"
                android:id="@+id/mensa_menue_1_Ken"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mensa_menue_2_container"
        style="@style/mensa_container"
        >
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                style="@style/mensa_menue_headline"
                android:text="@string/mensa_menue_2_headline"
                />
            <TextView
                android:id="@+id/mensa_menue_2_price"
                style="@style/mensa_menue_price"
                android:text="@string/mensa_menue_price_dummy"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                android:id="@+id/mensa_menue_2_name"
                style="@style/mensa_menue_name"
                android:text="@string/mensa_menue_name_dummy"/>
            <ImageView
                style="@style/mensa_menue_additonals"
                android:id="@+id/mensa_menue_2_additionals"
                android:src="@drawable/leer"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                android:id="@+id/mensa_menue_2_KenHl"
                style="@style/mensa_menue_KenHl"
                android:text="@string/mensa_menue_ken"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                style="@style/mensa_menue_Ken"
                android:id="@+id/mensa_menue_2_Ken"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mensa_menue_3_container"
        style="@style/mensa_container"
        >
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                style="@style/mensa_menue_headline"
                android:text="@string/mensa_menue_3_headline"
                />
            <TextView
                android:id="@+id/mensa_menue_3_price"
                style="@style/mensa_menue_price"
                android:text="@string/mensa_menue_price_dummy"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                android:id="@+id/mensa_menue_3_name"
                style="@style/mensa_menue_name"
                android:text="@string/mensa_menue_name_dummy"/>
            <ImageView
                style="@style/mensa_menue_additonals"
                android:id="@+id/mensa_menue_3_additionals"
                android:src="@drawable/leer"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                android:id="@+id/mensa_menue_3_KenHl"
                style="@style/mensa_menue_KenHl"
                android:text="@string/mensa_menue_ken"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                style="@style/mensa_menue_Ken"
                android:id="@+id/mensa_menue_3_Ken"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mensa_menue_buffet_container"
        style="@style/mensa_container"
        >
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                style="@style/mensa_menue_headline"
                android:text="@string/mensa_menue_buffet_headline"
                />
            <TextView
                android:id="@+id/mensa_menue_buffet_price"
                style="@style/mensa_menue_price"
                android:text="@string/mensa_menue_price_dummy"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                android:id="@+id/mensa_menue_buffet_name"
                style="@style/mensa_menue_name"
                android:text="@string/mensa_menue_name_dummy"/>
            <ImageView
                style="@style/mensa_menue_additonals"
                android:id="@+id/mensa_menue_buffet_additionals"
                android:src="@drawable/leer"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                android:id="@+id/mensa_menue_buffet_KenHl"
                style="@style/mensa_menue_KenHl"
                android:text="@string/mensa_menue_ken"/>
        </LinearLayout>
        <LinearLayout
            style="@style/mensa_innercontainer"
            >
            <TextView
                style="@style/mensa_menue_Ken"
                android:id="@+id/mensa_menue_buffet_Ken"
                />
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:id="@+id/mensa_ken_container"
        style="@style/mensa_container"
        android:stretchColumns="1"
        >
        <TableRow
            >
            <TextView
                style="@style/Headerline"
                android:layout_span="2"
                android:text="@string/mensa_ken_headline"
                />
        </TableRow>
        <TableRow
            style="@style/mensa_ken_row"
            >
            <TextView
                style="@style/mensa_ken_no"
                android:text="@string/mensa_ken_msc_No"/>
            <TextView
                style="@style/mensa_ken_des"
                android:text="@string/mensa_ken_msc"
                />
        </TableRow>
        <TableRow
            style="@style/mensa_ken_row"
            >
            <TextView
                style="@style/mensa_ken_no"
                android:text="@string/mensa_ken_schwe_No"/>
            <TextView
                style="@style/mensa_ken_des"
                android:text="@string/mensa_ken_schwe"
                />
        </TableRow>
        <TableRow
            style="@style/mensa_ken_row"
            >
            <TextView
                style="@style/mensa_ken_no"
                android:text="@string/mensa_ken_alk_No"/>
            <TextView
                style="@style/mensa_ken_des"
                android:text="@string/mensa_ken_alk"
                />
        </TableRow>
        <TableRow
            style="@style/mensa_ken_row"
            >
            <TextView
                style="@style/mensa_ken_no"
                android:text="@string/mensa_ken_gsch_No"/>
            <TextView
                style="@style/mensa_ken_des"
                android:text="@string/mensa_ken_gsch"
                />
        </TableRow>
        <TableRow
            style="@style/mensa_ken_row"
            >
            <TextView
                style="@style/mensa_ken_no"
                android:text="@string/mensa_ken_farb_No"/>
            <TextView
                style="@style/mensa_ken_des"
                android:text="@string/mensa_ken_farb"
                />
        </TableRow>
        <TableRow
            style="@style/mensa_ken_row"
            >
            <TextView
                style="@style/mensa_ken_no"
                android:text="@string/mensa_ken_ant_No"/>
            <TextView
                style="@style/mensa_ken_des"
                android:text="@string/mensa_ken_ant"
                />
        </TableRow>
        <TableRow
            style="@style/mensa_ken_row"
            >
            <TextView
                style="@style/mensa_ken_no"
                android:text="@string/mensa_ken_kon_No"/>
            <TextView
                style="@style/mensa_ken_des"
                android:text="@string/mensa_ken_kon"
                />
        </TableRow>
        <TableRow
            style="@style/mensa_ken_row"
            >
            <TextView
                style="@style/mensa_ken_no"
                android:text="@string/mensa_ken_schw_No"/>
            <TextView
                style="@style/mensa_ken_des"
                android:text="@string/mensa_ken_schw"
                />
        </TableRow>
        <TableRow
            style="@style/mensa_ken_row"
            >
            <TextView
                style="@style/mensa_ken_no"
                android:text="@string/mensa_ken_phos_No"/>
            <TextView
                style="@style/mensa_ken_des"
                android:text="@string/mensa_ken_phos"
                />
        </TableRow>
        <TableRow
            style="@style/mensa_ken_row"
            >
            <TextView
                style="@style/mensa_ken_no"
                android:text="@string/mensa_ken_sues_No"/>
            <TextView
                style="@style/mensa_ken_des"
                android:text="@string/mensa_ken_sues"
                />
        </TableRow>
        <TableRow
            style="@style/mensa_ken_row"
            >
            <TextView
                style="@style/mensa_ken_no"
                android:text="@string/mensa_ken_gesch_No"/>
            <TextView
                style="@style/mensa_ken_des"
                android:text="@string/mensa_ken_gesch"
                />
        </TableRow>
        <TableRow
            style="@style/mensa_ken_row"
            >
            <TextView
                style="@style/mensa_ken_no"
                android:text="@string/mensa_ken_rind_No"/>
            <TextView
                style="@style/mensa_ken_des"
                android:text="@string/mensa_ken_rind"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>

</ScrollView>
