<?xml version="1.0" encoding="utf-8"?>
<!--
*      Beschreibung:	Enthält die Elemente des Seitenmenüs
*      Autoren: 		Philipp Mosch, Daniel Spieker
*      Projekt:		    Campus App 2.0
*
*      ╔══════════════════════════════╗
*      ║ History                      ║
*      ╠════════════╦═════════════════╣
*      ║   Datum    ║    Änderung     ║
*      ╠════════════╬═════════════════╣
*      ║ 2015-xx-xx ║
*      ║ 20xx-xx-xx ║
*      ║ 20xx-xx-xx ║
*      ╚════════════╩═════════════════╝
*      Wichtig:           Tabelle sollte mit monospace Schriftart dargestellt werden
    -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="none" android:id="@+id/nav_side_pages">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/nav_side_subp_news" />
        <item
            android:id="@+id/nav_geld"
            android:icon="@drawable/geld"
            android:title="@string/nav_side_subp_geld" />
        <item
            android:id="@+id/nav_lageplan"
            android:icon="@drawable/lageplan"
            android:title="@string/nav_side_subp_lageplan" />
        <item
            android:id="@+id/nav_mensa"
            android:icon="@drawable/mensa"
            android:title="@string/nav_side_subp_mensa" />
    </group>
    <group android:checkableBehavior="none" android:id="@+id/nav_side_roles">
        <item android:id="@+id/nav_side_role"
            android:icon="@drawable/user"
            android:title="@string/nav_side_role" />
    </group>
</menu>
