<?xml version="1.0" encoding="utf-8"?>
<!--
*      Beschreibung:	Enthält das Layout für den Mensaöffnungszeitendialog
*      Autoren: 		Daniel Spieker
*      Projekt:		    Campus App 2.0
*
*      ╔══════════════════════════════╗
*      ║ History                      ║
*      ╠════════════╦═════════════════╣
*      ║   Datum    ║    Änderung     ║
*      ╠════════════╬═════════════════╣
*      ║ 2015-xx-xx ║
*      ║ 20xx-xx-xx ║
*      ║ 20xx-xx-xx ║
*      ╚════════════╩═════════════════╝
*      Wichtig:           Tabelle sollte mit monospace Schriftart dargestellt werden
    -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"  >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginBottom="2dp"
        android:textSize="16sp"
        android:text="@string/mensa_actionbar_info_times"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        android:text="@string/mensa_actionbar_info_times_val"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/mensa_actionbar_info_lunch"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/mensa_actionbar_info_lunch_val"/>


</LinearLayout>