<?xml version="1.0" encoding="utf-8"?>
<!--
*      Beschreibung:	Enthält das Layout des Lageplans
*      Autoren: 		Marius Korioth
*      Projekt:		    Campus App 2.0
*
*      ╔══════════════════════════════╗
*      ║ History                      ║
*      ╠════════════╦═════════════════╣
*      ║   Datum    ║    Änderung     ║
*      ╠════════════╬═════════════════╣
*      ║ 2015-xx-xx ║
*      ║ 20xx-xx-xx ║
*      ║ 20xx-xx-xx ║
*      ╚════════════╩═════════════════╝
*      Wichtig:           Tabelle sollte mit monospace Schriftart dargestellt werden
    -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dhbwloerrach.dhbwcampusapp20.Lageplan"
    tools:showIn="@layout/activity_lageplan"
    android:orientation="vertical">

    <ImageView
            android:id="@+id/imageViewLageplan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#f4f4f4"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/plan_hangstrasse"
            android:focusable="true"
            android:contentDescription="@string/lageplan_description"
            android:contextClickable="false" />

    <TextView
        android:id="@+id/lageplanTextview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lageplan_textview1"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:singleLine="false"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/lageplanTextview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lageplan_textview2"
        android:gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:textSize="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <EditText
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:id="@+id/lageplanTextfield"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:editable="true"
            android:textColor="#000000" />

        <Button
                android:id="@+id/navButtonLageplan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lageplan_button" />
    </LinearLayout>

</LinearLayout>
