<?xml version="1.0" encoding="utf-8"?>
<!--
*      Beschreibung:	Enthält das Layout für den Guthabendialog (Portrait)
*      Autoren: 		Daniel Spieker
*      Projekt:		    Campus App 2.0
*
*      ╔══════════════════════════════╗
*      ║ History                      ║
*      ╠════════════╦═════════════════╣
*      ║   Datum    ║    Änderung     ║
*      ╠════════════╬═════════════════╣
*      ║ 2015-xx-xx ║
*      ║ 20xx-xx-xx ║
*      ║ 20xx-xx-xx ║
*      ╚════════════╩═════════════════╝
*      Wichtig:           Tabelle sollte mit monospace Schriftart dargestellt werden
    -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"  >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="16sp"
        android:text="@string/guthaben_dialog_des"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <NumberPicker
            android:id="@+id/euro_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/guthaben_dialog_price_sep"/>


        <NumberPicker
            android:id="@+id/cent1_picker"
            android:layout_width="40dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center" />

        <NumberPicker
            android:id="@+id/cent2_picker"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:textSize="20sp"
            android:text="@string/guthaben_dialog_price_unit"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="12"
        android:layout_marginBottom="5dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:id="@+id/guthaben_dialog_btn1"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:id="@+id/guthaben_dialog_btn2"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:id="@+id/guthaben_dialog_btn3"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="12"
        android:layout_marginBottom="5dp"
        >
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:id="@+id/guthaben_dialog_btn4"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginLeft="3dp"
            android:id="@+id/guthaben_dialog_btn5"
            />

    </LinearLayout>

</LinearLayout>